<resources>
    <string name="app_name">LamprosKids</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Tel: +91 90818 19400</string>
    <string name="nav_header_subtitle">info@lamproskids.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">DashBoard</string>
    <string name="menu_gallery">Branch Info</string>
    <string name="menu_slideshow">Class Info</string>
    <string name="menu_tools">Manage Teachers</string>
    <string name="menu_share">Manage Students</string>
    <string name="menu_send">Log out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="toilet">
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string-array name="classs">
        <item>Tiny Tots MT</item>
        <item>Sr.Kg</item>
        <item>Jr.Kg</item>
        <item>Nursery</item>
        <item>Tiny Tots</item>
    </string-array>
    <string-array name="batch">
        <item>Morning</item>
        <item>Noon</item>
    </string-array>
    <string-array name="term">
        <item>Full</item>
        <item>Mid</item>
    </string-array>
    <string-array name="bloodgroup">
        <item>AB-</item>
        <item>AB+</item>
        <item>O-</item>
        <item>O+</item>
        <item>B-</item>
        <item>B+</item>
        <item>A-</item>
        <item>A+</item>
    </string-array>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="size">
        <item>S</item>
        <item>M</item>
        <item>L</item>
        <item>XL</item>
        <item>XXL</item>
    </string-array>
</resources>
